CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(roundtrip CXX)

ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-Werror)

SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNODEBUG")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_EXECUTABLE(roundtrip roundtrip.cpp)
TARGET_LINK_LIBRARIES(roundtrip pthread)
