CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(ttcp CXX)

ADD_COMPILE_OPTIONS(-g)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-Werror)
ADD_COMPILE_OPTIONS(-std=c++11)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNODEBUG")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

FILE(GLOB srcs "*.cpp")

ADD_EXECUTABLE(ttcp ${srcs})
TARGET_LINK_LIBRARIES(ttcp boost_program_options)
